[gd_scene load_steps=10 format=3 uid="uid://c1bmtcdsbq4a5"]

[ext_resource type="Script" path="res://Scripts/StartScreen.gd" id="1_tlxvy"]
[ext_resource type="Texture2D" uid="uid://q18wb1wd6h45" path="res://icon.svg" id="2_7f40p"]
[ext_resource type="Texture2D" uid="uid://nf3xn4dbljfr" path="res://Assets/Images/3x3.png" id="3_b50k6"]
[ext_resource type="Texture2D" uid="uid://bidbrf3v0h84v" path="res://Assets/Images/4x4.png" id="4_avf8t"]
[ext_resource type="Texture2D" uid="uid://c2iutkvh8otp4" path="res://Assets/Images/5x5.png" id="5_p8onh"]
[ext_resource type="Texture2D" uid="uid://i6i4yea0c3jy" path="res://Assets/Images/6x6.png" id="6_cytcp"]
[ext_resource type="FontFile" uid="uid://c83f123hibnbi" path="res://Assets/Fonts/blader/Blader.ttf" id="7_a6fas"]

[sub_resource type="Gradient" id="Gradient_0od1r"]
colors = PackedColorArray(0.0274277, 0.2171, 0.274904, 1, 0, 0.764706, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lwv74"]
gradient = SubResource("Gradient_0od1r")
fill = 1
fill_from = Vector2(0.295, -0.65)
fill_to = Vector2(1, 1)

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlxvy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_lwv74")
flip_v = true

[node name="MadeWithGodotContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -40.0
offset_right = 73.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MadeWithGodotContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Made with Godot 4"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MadeWithGodotContainer"]
layout_mode = 2
texture = ExtResource("2_7f40p")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 500

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_spacing = 70
theme_override_font_sizes/font_size = 34
text = "3x3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3x3" type="TextureButton" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_b50k6")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_spacing = 70
theme_override_font_sizes/font_size = 34
text = "4x4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4x4" type="TextureButton" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_avf8t")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_spacing = 70
theme_override_font_sizes/font_size = 34
text = "5x5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton5x5" type="TextureButton" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("5_p8onh")

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_spacing = 70
theme_override_font_sizes/font_size = 34
text = "6x6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton6x6" type="TextureButton" parent="MarginContainer/CenterContainer/GridContainer/VBoxContainer4"]
layout_mode = 2
texture_normal = ExtResource("6_cytcp")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 130.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("7_a6fas")
theme_override_font_sizes/font_size = 110
text = "puzzle 15"
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/VBoxContainer/TextureButton3x3" to="." method="_On_TextureButton3x3_Pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/VBoxContainer2/TextureButton4x4" to="." method="_On_TextureButton4x4_Pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/VBoxContainer3/TextureButton5x5" to="." method="_On_TextureButton5x5_Pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/VBoxContainer4/TextureButton6x6" to="." method="_On_TextureButton6x6_Pressed"]
